objects/Deal_Desk_Product__c.object
<CustomObject>
    <fields>
        <fullName>Deal_Desk_Review__c</fullName>
        <label>Deal Desk Review</label>
        <referenceTo>Deal_Desk_Review__c</referenceTo>
        <relationshipLabel>Deal Desk Products and Professional Services</relationshipLabel>
        <relationshipName>Deal_Desk_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Existing_Contract__c</fullName>
        <label>Existing Contract</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deal Desk Products</relationshipLabel>
        <relationshipName>Deal_Desk_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year_1__c</fullName>
        <label>Year 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_2__c</fullName>
        <label>Year 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_3__c</fullName>
        <label>Year 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <description>Adds Quote Products to Deal Desk Reviews</description>
    <label>Deal Desk Product</label>
    <nameField>
        <displayFormat>DDP-{0000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Desk Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>